<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TrickSelectionActivity"
    tools:showIn="@layout/activity_trick_selection">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/trickEntryInstructions"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/TextAppearance.AppCompat.Headline" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sit"
        android:id="@+id/sitCheckBox"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay"
        android:id="@+id/stayCheckBox"
        android:checked="false"
        android:layout_above="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:id="@+id/downCheckBox"
        android:checked="false"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stand"
        android:id="@+id/standCheckBox"
        android:checked="false"
        android:layout_alignTop="@+id/downCheckBox"
        android:layout_alignLeft="@+id/stayCheckBox"
        android:layout_alignStart="@+id/stayCheckBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recall"
        android:id="@+id/comeCheckBox"
        android:checked="false"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beg"
        android:id="@+id/begCheckBox"
        android:checked="false"
        android:layout_alignTop="@+id/comeCheckBox"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNext"
        android:id="@+id/submitTricks"
        android:onClick=""
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        style="@style/Base.Widget.AppCompat.Button.Colored" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/sit"
        android:layout_below="@+id/sitCheckBox"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:contentDescription="@string/sit" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/stay"
        android:layout_below="@+id/stayCheckBox"
        android:layout_alignLeft="@+id/stayCheckBox"
        android:layout_alignStart="@+id/stayCheckBox"
        android:contentDescription="@string/stay" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/down"
        android:layout_below="@+id/downCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/down" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/stand"
        android:contentDescription="@string/stand"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/standCheckBox"
        android:layout_alignStart="@+id/standCheckBox" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/recall"
        android:layout_below="@+id/comeCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/recall" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/beg"
        android:contentDescription="@string/beg"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignLeft="@+id/begCheckBox"
        android:layout_alignStart="@+id/begCheckBox" />

</RelativeLayout>
