<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectDogActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view3">
    </android.support.design.widget.AppBarLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dogSpinner"
        android:spinnerMode="dropdown"
        android:clickable="true"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/dogSelectionText"
        android:layout_alignLeft="@+id/deleteDogButton"
        android:layout_alignStart="@+id/deleteDogButton"
        android:layout_alignRight="@+id/selectDogNameButton"
        android:layout_alignEnd="@+id/selectDogNameButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDogButton"
        android:background="@drawable/custom_button_green"
        android:id="@+id/selectDogNameButton"
        android:layout_alignTop="@+id/deleteDogButton"
        android:layout_toLeftOf="@+id/addDogActionButton"
        android:layout_toStartOf="@+id/addDogActionButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteDogButton"
        android:id="@+id/deleteDogButton"
        android:background="@drawable/custom_button_pink"
        android:layout_below="@+id/dogSpinner"
        android:layout_toLeftOf="@+id/selectDogNameButton"
        android:layout_toStartOf="@+id/selectDogNameButton"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/selectDogText"
        android:id="@+id/dogSelectionText"
        android:layout_below="@+id/view3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addDogActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_input_add"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/view3"
        android:layout_alignEnd="@+id/view3" />

</RelativeLayout>
